// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyAccount Password API Manage with SDK methods can manage password with SDK methods 1`] = `
Object {
  "created": "2022-04-20T17:02:41.000Z",
  "delete": Any<Function>,
  "get": Any<Function>,
  "headers": Any<Object>,
  "id": Any<String>,
  "lastUpdated": "2022-11-15T23:05:20.000Z",
  "status": "ACTIVE",
  "update": Any<Function>,
}
`;

exports[`MyAccount Password API Manage with SDK methods can manage password with SDK methods 2`] = `
Object {
  "created": "2022-04-20T17:02:41.000Z",
  "delete": Any<Function>,
  "get": Any<Function>,
  "headers": Any<Object>,
  "id": Any<String>,
  "lastUpdated": "2022-11-15T23:05:20.000Z",
  "status": "ACTIVE",
  "update": Any<Function>,
}
`;

exports[`MyAccount Password API Manage with SDK methods can manage password with SDK methods 3`] = `
Object {
  "created": "2022-04-20T17:02:41.000Z",
  "delete": Any<Function>,
  "get": Any<Function>,
  "headers": Any<Object>,
  "id": Any<String>,
  "lastUpdated": "2022-11-15T23:05:21.000Z",
  "status": "ACTIVE",
  "update": Any<Function>,
}
`;

exports[`MyAccount Password API Manage with SDK methods can manage password with SDK methods 4`] = `BaseTransaction {}`;

exports[`MyAccount Password API Manage with Transaction functions can manage password with transaction functions 1`] = `
Object {
  "created": "2022-04-20T17:02:41.000Z",
  "delete": Any<Function>,
  "get": Any<Function>,
  "headers": Any<Object>,
  "id": Any<String>,
  "lastUpdated": "2022-11-15T23:05:15.000Z",
  "status": "ACTIVE",
  "update": Any<Function>,
}
`;

exports[`MyAccount Password API Manage with Transaction functions can manage password with transaction functions 2`] = `
Object {
  "created": "2022-04-20T17:02:41.000Z",
  "delete": Any<Function>,
  "get": Any<Function>,
  "headers": Any<Object>,
  "id": Any<String>,
  "lastUpdated": "2022-11-15T23:05:15.000Z",
  "status": "ACTIVE",
  "update": Any<Function>,
}
`;

exports[`MyAccount Password API Manage with Transaction functions can manage password with transaction functions 3`] = `
Object {
  "created": "2022-04-20T17:02:41.000Z",
  "delete": Any<Function>,
  "get": Any<Function>,
  "headers": Any<Object>,
  "id": Any<String>,
  "lastUpdated": "2022-11-15T23:05:17.000Z",
  "status": "ACTIVE",
  "update": Any<Function>,
}
`;

exports[`MyAccount Password API Manage with Transaction functions can manage password with transaction functions 4`] = `BaseTransaction {}`;

exports[`MyAccount Password API Manage with Transaction functions can manage password with transaction functions 5`] = `
Object {
  "created": undefined,
  "enroll": Any<Function>,
  "headers": Any<Object>,
  "id": undefined,
  "lastUpdated": undefined,
  "status": "NOT_ENROLLED",
}
`;

exports[`MyAccount Password API Manage with Transaction functions can manage password with transaction functions 6`] = `
Object {
  "created": "2022-04-20T17:02:41.000Z",
  "delete": [Function],
  "get": [Function],
  "headers": Any<Object>,
  "id": Any<String>,
  "lastUpdated": "2022-11-15T23:05:18.000Z",
  "status": "ACTIVE",
  "update": [Function],
}
`;
